--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -2,204 +2,287 @@
       xmlns:py="http://genshi.edgewall.org/">
 <py:match path="head" once="true">
    ${select('*')}
-
-  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/css/template2009/ku-sec.css" />
+  
   <link rel="shortcut icon" href="https://www.kumc.edu/_dev/favicon.ico" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway:300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" />
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Anton|Muli:300,400,400italic,300italic|Goudy+Bookletter+1911|Oswald&amp;subset=latin,latin-ext" media="all" />
+  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/fontawesome/css/all.css" />
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Noto+Serif&amp;display=swap" />
+  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/icon-fonts.css" />
+  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/jquery-ui.css" />
+  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/target-firefox.css" />
+  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/main.css" />
+  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/igxdev.css" />
+  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/css/kumc-custom.css" />
   <link rel="stylesheet" type="text/css" href="/av/top_btn.css" />
   <script async="async" src="/av/top_btn.js" type="text/javascript"></script>
-  <script src="https://www.kumc.edu/js/jquery/jquery-1.3.2/jquery-1.3.2.min.js" type="text/javascript"></script>
-  <script src="https://www.kumc.edu/js/ku/kutemplate_2009.js" type="text/javascript"></script>
-  <script src="https://www.kumc.edu/js/jqueryui/1.7.1/ui.core-1.7.1.js" type="text/javascript"></script>
+ 
 <!-- jquery.showhids.js ? -->
 </py:match>
 
 <py:match path="body" once="true">
   <div id="kumc_accessibilty_skip">
-    <a href="#maincontent" accesskey="2" name="top" id=
-    "top"><img src=
-    "https://www.kumc.edu/Images/template2009/widgets/spacer.gif"
-    alt="Skip redundant pieces" width="1" height="1" border=
-    "0" /></a>
+      <a href="#maincontent" accesskey="2" name="top" id=
+      "top"><img src=
+      "https://www.kumc.edu/Images/template2009/widgets/spacer.gif"
+      alt="Skip redundant pieces" width="1" height="1" border=
+      "0" /></a>
   </div>
-
-  <div id="kutemplate">
-    <div id="kubackground" class="backgroundblue">
-      <div class="container" id="header">
-
-        <div class="span-24 last">
-          <div id="logo" class="span-9">
-            <a href="http://www.kumc.edu/"><img id="mylogo" class=
-            "png" src=
-            "https://www.kumc.edu/Images/logos/kumclogo_w.png" alt=
-            "KUMC Medical Center" name="mylogo" /></a>
-          </div>
-
-          <div id="buildingicon" class="span-6">
-            &#160;
-          </div>
-
-          <div id="search" class="span-9 last">
-            <form class="search" method="get" action=
-            "http://cgi.kumc.edu/cgi-bin/advsearch">
-              <label for="searchtype" class="hidden" accesskey=
-              "S">Search Type</label><select name="location" id=
-              "searchtype">
-                <option value="1" selected="selected">
-                  Search KUMC web site
-                </option>
-
-                <option value="23">
-                  Search phone directory
-                </option>
-              </select><label for="searchtext" class="hidden"
-              accesskey="I">Search Text</label><input type="text"
-              id="searchtext" name="search" size="20" alt=
-              "enter search terms" class="kumc_searchform input"
-              value="keyword/name" title="keyword/name" style=
-              "margin-left:8px;" /><input class="button" name=
-              "Search" type="image" src=
-              "https://www.kumc.edu/Images/icons/search.gif" alt=
-              "Search" />
-            </form>
-
-            <ul class="links">
-              <li><a href="https://my.kumc.edu/" title=
-              "myKUMC">myKUMC</a></li>
-
-              <li><a href="http://www2.kumc.edu/directory/" title=
-              "Directory">Directory</a></li>
-
-              <li><a href="http://library.kumc.edu/" title=
-              "Library">Library</a></li>
-	      <!-- a-z -->
-	    </ul>
-	  </div>
-	</div>
-
-	<div class="span-24 last" id="topnav">
-	  <h2 class="unit">${select(".//h1/text()")}</h2>
-	  <div id="toptabnav">
-	    <p><a href="http://www.kumc.edu/">KUMC Home</a>&#160;&gt;&#160;<a
-	    href="https://www.kufrontiers.org">Frontiers</a
-	>&#160;&gt;&#160;<a href="https://heron.kumc.edu">HERON</a>
-	    </p>
-	  </div>
-	</div>
-      </div>
-      <!-- printheader -->
-
-      <div id="content" class="container">
-	<div class="span-5">
-	  <div id="leftnavigation">
-	    <div id="menu">
-	      ${select(".//div[@id='menu']/*|text()")}
-	    </div>
-	  </div>
-	</div>
-	
-	<div id="main" class="withnav span-19 last">
-	  <a name="maincontent" id="maincontent"></a>
-	  <div class="span-14">
-	    ${select(".//div[@id='main']/*|text()")}
-	  </div>
-
-	  <div class="span-5 last" id="rightnav">
-	    ${select(".//div[@id='rightnav']/*|text()")}
-	  </div>
-
-	</div>
-      </div>
+  <header class="fix menu-move-hook d-none d-lg-flex fhook" role="banner">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="d-flex">
+                  <a id="main-logo-link" href="https://heron.kumc.edu/heron/" style="font-size:0;">kumc.edu  <img src="https://www.kumc.edu/_dev/logo--kumc-main.png" alt="KU Medical Center logo image"></a>
+                  <div class="col-lg-8 ml-auto d-none d-lg-block">
+                    <ul class="secondary">
+                      <li><a href="https://www.kumc.edu/about/our-campuses.html" title="Our Campuses">Our Campuses</a></li>
+                      <li><a href="https://www.kumc.edu/about/make-a-gift.html" title="Make a Gift">Make a Gift</a></li>
+                    </ul>
+                  </div>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div id="footer">
-      <div id="concave" class="container">
-        <div class="container" id="myfooter">
-          <div id="footercontact" class="span-10">
-            <p><a href=
-            "http://www.kumc.edu/x111.xml"><strong>Contact
-            KUMC</strong></a><br />
-            The University of Kansas<br />
-            Medical Center<br />
-            3901 Rainbow Boulevard<br />
-            Kansas City, KS 66160<br />
-            913-588-5000 | 913-588-7963 TDD</p>
-          </div>
-
-          <div id="footerjayhawk" class="span-4">
-           <button onclick="topFunction()" id="scrollBtn" title="Go to the top of the page"><i class="fa fa-chevron-up"></i></button>
-          </div>
-
-          <div id="footertagline" class="span-10 last"><img src=
-          "https://www.kumc.edu/Images/icons/tagline.png" alt=
-          "Educating Healthcare Professionals Since 1905" /></div>
+  </header>
+  
+  <main id="main">
+    <div class="tray tray--no-banner">
+      <div class="dots-wrapper light-blue">
+        <div class="dots d-none d-md-block">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="dots d-none d-md-block">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="dots d-none d-md-block">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="dots d-none d-md-block">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="dots d-none d-md-block">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="dots d-none d-md-block">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="dots d-none d-md-block">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="dots d-none d-md-block">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="dots d-none d-md-block">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="dots d-none d-md-block">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="dots d-none d-md-block">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="dots d-none d-md-block">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="dots d-none d-md-block">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="dots d-none d-md-block">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="dots d-none d-md-block">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
       </div>
-
-      <div id="breadcrumbarea">
-        <div id="breadcrumb" class="container"></div>
-      </div>
-
-      <div id="bottomarea">
-        <div id="bottom" class="container">
-          <ul class="links">
-            <li><a href="http://www.kumc.edu/x104.xml" title=
-            "About Us">About Us</a></li>
-
-            <li><a href="http://library.kumc.edu/" title=
-            "Library">Library</a></li>
-
-            <li><a href=
-            "http://www2.kumc.edu/webevent/scripts/webevent.plx?calID=960&amp;userid=guest&amp;cmd=listday"
-            title="Calendar">Calendar</a></li>
-
-            <li><a href="http://www.kumc.edu/x758.xml" title=
-            "Executive Vice Chancellor">Executive Vice
-            Chancellor</a></li>
-
-            <li><a href="http://www.kumc.edu/x111.xml" title=
-            "Maps and Contact Information">Maps and Contact
-            Information</a></li>
-
-            <li><a href="http://www.kumc.edu/x286.xml" title=
-            "Job Opportunities">Job Opportunities</a></li>
-
-            <li><a href="http://www.kumc.edu/x1064.xml" title=
-            "Social Media">Social Media</a></li>
-          </ul>
-
-          <ul class="links"></ul>
-
-          <ul class="links">
-            <li><a href="http://www.kumc.edu/x793.xml">An
-            EO/AA/Title IX Institution</a></li>
-
-            <li><a href="http://www.kumc.edu/x794.xml">Privacy
-            Statement</a></li>
-
-            <li><a href="http://www.kumc.edu/x939.xml">About this
-            Site</a></li>
-
-            <li><a href=
-            "http://www.kumc.edu/x795.xml">Help</a></li>
-          </ul>
-
-          <ul class="links">
-            <li>© <script language="JavaScript" type=
-            "text/javascript">
-//<![CDATA[
-              var d=new Date();
-              yr=d.getFullYear();
-              if (yr!=1863)
-              document.write(yr);
-              //]]>
-              </script> The University of Kansas Medical Center
-            </li>
-          </ul>
+          
+      <div class="row">
+        <div class="col-12">
+          <div class="center-content">
+            <div class="container"> 
+              <h1>We're sorry, the page you are looking for may have moved</h1>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-  </div>
+    <div class="tray page-builder-container ">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h1>Main Content goes here</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="page-builder" class="page-builder-container" style="display: none;"></div>
+  </main>
+
+  <footer role="contentinfo">
+        <div class="tray tray--flush tray--footer">
+            <div class="background-image-container">
+                <div class="background-image" style="background-image: url('https://www.kumc.edu/Content/img/footer-background.jpg');">
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                            <div class="center-content">
+                                <a class="button button-outline button-outline--gift" href="https://www.kumc.edu/about/make-a-gift.html"><img src="https://www.kumc.edu/Content/img/logos/logo--endowment.png" role="presentation" alt="">Make a Gift<i class="fas fa-chevron-right"></i></a>
+                            </div>
+                                                    <div class="center-content">
+                                <a class="logo logo--footer" href="https://heron.kumc.edu/heron/"><img src="https://www.kumc.edu/_dev/logo--white.png" aria-label="Click to go back to home page." alt="KUMC Logo"></a>
+                            </div>
+                        <div class="address-container">
+                            3901 Rainbow Boulevard, Kansas City, KS 66160 | 
+                                <a href="tel:913-588-5000" style="color:white;">913-588-5000</a>
+                        </div>
+                            <div class="center-content">
+                                        <ul>
+                            <li>
+        <a href="https://www.kumc.edu/about.html" class="site-links" title="About">
+            About
+        </a>
+                            </li>
+                            <li>
+        <a href="https://www.kumc.edu/about/events-calendar.html" class="site-links" title="Calendar">
+            Calendar
+        </a>
+                            </li>
+                            <li>
+        <a href="https://www.kumc.edu/about/news.html" class="site-links" title="News">
+            News
+        </a>
+                            </li>
+                            <li>
+        <a href="https://www.kumc.edu/about/privacy-statement.html" class="site-links" title="Privacy Statement">
+            Privacy Statement
+        </a>
+                            </li>
+                            <li>
+        <a href="https://www.kumc.edu/human-resources/careers.html" class="site-links" title="Careers">
+            Careers
+        </a>
+                            </li>
+
+        </ul>
+
+                            </div>
+                                                    <div class="center-content">
+                                    <ul class="social">
+            <li><a href="https://www.facebook.com/kumedicalcenter" target="_blank"><i class="fab fa-facebook-f"></i><span class="sr-only">Facebook opens in new tab</span></a></li>
+            <li><a href="https://www.twitter.com/kumedcenter" target="_blank"><i class="fab fa-twitter"></i><span class="sr-only">Twitter opens in new tab</span></a></li>
+            <li><a href="https://www.youtube.com/KUMedCenter" target="_blank"><i class="fab fa-youtube"></i><span class="sr-only">YouTube opens in new tab</span></a></li>
+            <li><a href="http://www.instagram.com/kumedcenter" target="_blank"><i class="fab fa-instagram"></i><span class="sr-only">Instagram opens in new tab</span></a></li>
+            <li><a href="https://www.linkedin.com/edu/school?id=18388" target="_blank"><i class="fab fa-linkedin-in"></i><span class="sr-only">LinkedIn opens in new tab</span></a></li>
+    </ul>
+
+                            </div>
+                        <div class="copywright-ps-cs">
+<p>© 2021 The University of Kansas prohibits discrimination on the basis of race, color, ethnicity, religion, sex, national origin, age, ancestry, disability, status as a veteran, sexual orientation, marital status, parental status, gender identity, gender expression, and genetic information in the university's programs and activities. Retaliation is also prohibited by university policy. The following persons have been designated to handle inquiries regarding the nondiscrimination policies and are the Title IX coordinators for their respective campuses: Director of the Office of Institutional Opportunity &amp; Access, <a href="mailto:IOA@ku.edu" title="Email the IOA">IOA@ku.edu</a>, Room 1082, Dole Human Development Center, 1000 Sunnyside Avenue, Lawrence, KS 66045, 785-864-6414, 711 TTY (for the Lawrence, Edwards, Parsons, Yoder, and Topeka campuses); Director, Equal Opportunity Office, Mail Stop 7004, 4330 Shawnee Mission Parkway, Fairway, KS 66205, 913-588-8011, 711 TTY (for the Wichita, Salina, and Kansas City, Kansas medical center campuses).</p>                                    <a href="https://www.kumc.edu/about/privacy-statement.html" title="Privacy Statement">
+            Privacy Statement
+        </a>
+ |         <a href="https://www.kumc.edu/documents/hipaa/KUMCNoticeofPrivacyPractices.pdf" title="Notice of Privacy Practices">
+            Notice of Privacy Practices
+        </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </py:match>
 </div>
