syntax update for alt tag

--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -37,7 +37,7 @@
                   <a id="main-logo-link" href="https://heron.kumc.edu/heron/" style=
                     "font-size:0;">kumc.edu<img src=
                     "https://www.kumc.edu/_dev/logo--kumc-main.png" alt=
-                    "KU Medical Center logo image"></a>
+                    "KU Medical Center logo image" /></a>
                   <div class="col-lg-8 ml-auto d-none d-lg-block">
                     <ul class="secondary">
                       <li><a href="https://www.kumc.edu/about/our-campuses.html" title=
