--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -47,6 +47,8 @@
                     </ul>
                   </div>
                 </div>
+                <nav class="main-nav d-none d-lg-flex" aria-label="Main navigation">                        
+                </nav>
             </div>
         </div>
     </div>
