--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -30,7 +30,7 @@
       alt="Skip redundant pieces" width="1" height="1" border=
       "0" /></a>
   </div>
-  <header class="igx-alt-hook d-none d-lg-block" role="banner">
+  <header class="fix menu-move-hook d-none d-lg-flex fhook" role="banner">
     <div class="container">
         <div class="row">
             <div class="col-12">
